samples/_failures_safe/1761631509_8b5ac5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a3248f1.c: In function ‘main’:
./samples/SAFE/__tmp_5a3248f1.c:169:22: error: expected ‘;’ at end of input
  169 |             freeGraph
      |                      ^
      |                      ;
./samples/SAFE/__tmp_5a3248f1.c:169:13: error: expected declaration or statement at end of input
  169 |             freeGraph
      |             ^~~~~~~~~
./samples/SAFE/__tmp_5a3248f1.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5a3248f1.c:169:13: error: expected declaration or statement at end of input
